--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,11 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 img {
@@ -23,4 +29,23 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+/* Solution */
+.title {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.icon-section {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+  margin-top: 32px;
+}
+
+.icon-container {
+  max-width: 200px;
+  text-align: center;
 }
